--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
     <script src="/js/module/brand.js"></script>
     <script src="/js/module/advertisement.js"></script>
     <script src="/js/module/info.js"></script>
+    <script src="/js/module/subject.js"></script>
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
@@ -68,6 +69,9 @@
                     </li>
                     <li>
                         <a ui-sref="info">信息发布</a>
+                    </li>
+                    <li>
+                        <a ui-sref="subject">subject</a>
                     </li>
                     <li>
                         <a href="customer.html">客户行为统计</a>
