--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -1,53 +1,25 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>Insert title here</title>
-		<meta charset="UTF-8"/>
-		<meta name="_csrf" th:content="${_csrf.token}" />
-		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
-		<script src="/js/jquery-1.11.2.min.js"></script>
-		<script src="/js/vendor/jquery.ui.widget.js"></script>
-		<script src="/js/jquery.iframe-transport.js"></script>
-		<script src="/js/jquery.fileupload.js"></script>
-		<script src="/js/ajaxSecurity.js"></script>
-		<script src="/js/fileUpload.js"></script>
-		<script>
-            $(function() {
-                var abortButton = $('<button/>').text('abort').click(function() {
-
-                });
-            });
-		</script>
-		<style>
-			.bar {
-				height: 18px;
-				background-color: green;
-			}
-		</style>
-	</head>
-	<body>
-		<form method="post" th:object="${subject}">
-			product1:
-			<input type="text" th:field="*{products}"/>
-			product2:
-			<input type="text" th:field="*{products}"/>
-			name:
-			<input th:field="*{name}"/>
-			audio:
-			<input type="file" name="file" data-url="/admin/audio"/>
-			category:
-			<select th:field="*{category}">
-				<option value="" >--请选择--</option>
-				<option th:each="var : ${categories}"
-				th:value="${var.id}"
-				th:text="${var.name}">category</option>
-			</select>
-			<div id="progress">
-				<div class="bar" style="width: 0%;"></div>
-			</div>
-			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-			<input type="submit"/>
-		</form>
-		<div th:include="fragments/footer::copy"></div>
-	</body>
-</html>
+<div class="modal-content">
+    <div class="modal-body">
+        <div class="contentpanel">
+            <form class="form-horizontal w300" ng-submit="submit()">
+                <div class="row">
+                    <div class="form-group">
+                        <label class="control-label col-sm-2">标题</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="item.title" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2">图片</label>
+                        <div class="col-sm-6">
+                            <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" class="btn btn-primary" value="提交" />
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
