--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -73,13 +73,13 @@
 													<a class="blue revoke">撤销</a>
 											</td>
 											<td class="show-wrap" th:attr="data-id=${product.id}" th:case="${'UP'}">
-													<a class="blue down">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify">修改</a>
+													<a class="blue down">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'">修改</a>
 											</td>
 											<td class="show-wrap1" th:attr="data-id=${product.id}" th:case="${'DOWN'}">
-													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify">修改</a>
+													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'">修改</a>
 											</td>
 											<td class="show-wrap1" th:attr="data-id=${product.id}" th:case="${'NOT'}">
-													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify">修改</a>
+													<a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue modify" th:href="'/provider/products/'+${product.id}+'?edit'">修改</a>
 											</td>
 									</tr>
 								</tbody>
