--- a/web/src/main/resources/templates/user/provider/maintaintd.html
+++ b/web/src/main/resources/templates/user/provider/maintaintd.html
@@ -18,12 +18,12 @@
 	<td class="show-wrap" th:attr="data-id=${product.id}"
 	th:case="${'EXAMINE'}"><a class="blue revoke">撤销</a></td>
 	<td class="show-wrap" th:attr="data-id=${product.id}" th:case="${'UP'}">
-		<a class="blue down">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue">修改</a>
+		<a class="blue down">下架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="blue" th:href="'/provider/products/'+${product.id}+'?edit'">修改</a>
 </td>
 	<td class="show-wrap1" th:attr="data-id=${product.id}"
 	th:case="${'DOWN'}"><a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-		class="blue">修改</a></td>
+		class="blue" th:href="'/provider/products/'+${product.id}+'?edit'">修改</a></td>
 	<td class="show-wrap1" th:attr="data-id=${product.id}"
 	th:case="${'NOT'}"><a class="blue up">上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-		class="blue">修改</a></td>
+		class="blue" th:href="'/provider/products/'+${product.id}+'?edit'">修改</a></td>
 </i>
