--- a/web/src/main/resources/templates/user/provider/modifyProduct.html
+++ b/web/src/main/resources/templates/user/provider/modifyProduct.html
@@ -5,19 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
   <title>商品修改</title>
+  <meta name="_csrf" th:content="${_csrf.token}" />
+  <meta name="_csrf_header" th:content="${_csrf.headerName}" />	
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script th:src="@{/js/jquery-min.js}"></script>
+  <script type="text/javascript" th:src="@{/js/jquery.ui.widget.js}"></script>
+  <script type="text/javascript" th:src="@{/js/jquery.iframe-transport.js}"></script>
+  <script type="text/javascript" th:src="@{/js/jquery.fileupload.js}"></script>
   <script th:src="@{/js/script.js}"></script>
-   <script th:src="@{/js/searchCategory.js}"></script>
+  <script th:src="@{/js/searchCategory.js}"></script>
   <script th:src="@{/js/ckeditor/ckeditor.js}"></script>
-  <meta name="_csrf" th:content="${_csrf.token}" />
-	<meta name="_csrf_parameterName" th:content="${_csrf.parameterName}" />	
-	<script th:src="@{/js/ckeditor/adapters/jquery.js}"></script>
+  <script th:src="@{/js/ckeditor/adapters/jquery.js}"></script>
+  <script th:src="@{/js/modifyAction.js}"></script>
 	<script>
         $(function() {
-            var token = $("meta[name='_csrf']").attr("content");
-            var header = $("meta[name='_csrf_parameterName']").attr("content");
-            $(document).ajaxSend(function(e, xhr, options) {
+        	var token = $("meta[name='_csrf']").attr("content");
+    		var header = $("meta[name='_csrf_header']").attr("content");
+
+    		$(document).ajaxSend(function(e, xhr, options) {
     			xhr.setRequestHeader(header, token);
     		});
             $('#content').ckeditor({
@@ -25,6 +30,60 @@
                 width : 630,
                  height : 300
             });
+            $('input[type="file"]').bind('fileuploadsubmit', function(e, data) {
+                var self = $(this);
+                data.formData = {
+                    url : self.prev('input').val()
+                };
+            });
+
+            $('input[type="file"]').fileupload({
+                dataType : 'json',
+                add : function(e, data) {
+                    data.submit();
+                },
+                done : function(e, data) {
+                    $(this).parent().parent().find("img").attr("src",data.result.files[0].url);
+                    $('#coverImg').val(data.result.files[0].url);
+                },
+                progressall : function(e, data) {
+                }
+            });
+            var formObj = $('form');
+            var category = $("#firstCategory").val();
+            var productId = formObj.attr("data-id");
+            switch(category){
+    		case '仪器':
+    			formObj.attr("action","/provider/instruments/"+productId+"?edit");
+    			break;
+    		case '试剂':
+    			formObj.attr("action","/provider/reagents/"+productId+"?edit");
+    			break;
+    		case '耗材':
+    			formObj.attr("action","/provider/consumables/"+productId+"?edit");
+    			break;
+    		case '服务':
+    			formObj.attr("action","/provider/services/"+productId+"?edit");
+    			break;
+    		}
+          	var secondCategory = $('#secondCategory');
+          	var thirdCategory = $('#thirdCategory');
+          	secondCategory.change(function(){
+          		thirdCategory.empty();
+          		$.ajax({
+          			type : 'get',
+          			url : '/ajaxProductCategory/'+secondCategory.val(),
+          			success:function(data){
+          				var str = '<option value="">请选择</option>';
+          				$.each(data,function(key,val){
+          					str = str+'<option value="'+val.id+'">'+val.name+'</option>';
+          				});
+          				thirdCategory.append(str);
+          			},error:function(data){
+          				alert("error");
+          			}
+          		});
+          	});
         });
 	</script>
 </head>
@@ -40,11 +99,11 @@
 				<div class="aside fl">
 					<a href="/provider/detail">个人资料</a>
 					<a href="/provider/products?form">发布商品</a>
-					<a class="active">商品维护</a>
+					<a class="active" href="/provider/products">商品维护</a>
 					<a href="/provider/count">商品信息统计</a>
 				</div>
 				<div class="mainpanel bodr basic-info push-good fr">
-					<form th:object="${product}" method="post">	
+					<form th:object="${product}" th:method="put" th:attr="data-id=${product.id}">	
 						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 		
 						<div class="form-group">
 							<div class="fl">
@@ -100,19 +159,19 @@
 						<div class="form-group">
 							<div class="fl">
 							<label><i>*</i>产品分类</label>
-							<select class="w200" th:field="*{firstCategory}">
-								<option value="">请选择</option>
-								<option th:each="category:${pcs}" th:value="${category.id}" th:text="${category.name}"></option>
-							</select>
-							<i class="error" th:if="${#fields.hasErrors('firstCategory')}" th:errors="*{firstCategory}"></i>
+							<input type="text" th:value="*{firstCategory.name}" id="firstCategory" disabled="disabled"/>
 							</div>
 							<div class="fl">
 							<select class="w200" th:field="*{secondCategory}">
+							<option value="">请选择</option>
+								<option th:each="category:${seconds}" th:value="${category.id}" th:text="${category.name}"></option>
 							</select>
 							<i class="error" th:if="${#fields.hasErrors('secondCategory')}" th:errors="*{secondCategory}"></i>
 							</div>
 							<div class="fl">
 							<select class="w200" th:field="*{thirdCategory}">
+							<option value="">请选择</option>
+								<option th:each="category:${thirds}" th:value="${category.id}" th:text="${category.name}"></option>
 							</select>
 							<i class="error" th:if="${#fields.hasErrors('thirdCategory')}" th:errors="*{thirdCategory}"></i>
 							</div>
@@ -120,14 +179,17 @@
 						<div class="form-group">
 							<div class="fl">
 							<label><i>*</i>标签</label>							
-							<input type="text" class="w630" th:text="*{label}"/>
+							<input type="text" class="w630" th:field="*{label}"/>
 							<i class="error" th:if="${#fields.hasErrors('label')}" th:errors="*{label}"></i>
 							</div>
 						</div>	
-						<div class="form-group">
-							<label><i>*</i>产品图片</label>							
-							<input type="file" />
-							<span class="file-type">(只上传小于XXXK的图片)</span>
+						<div class="form-group files">
+							<label><i>*</i>商品图片</label> <img th:src="*{coverImg}" width="100" height="100" />
+							<input type="hidden" th:field="*{coverImg}"/>
+							<button id="uploadImg">
+								<input type='file' name='file' th:attr="data-url=@{/productImage}" /> <a href="#">选择文件</a>
+							</button>
+							<i class="error" th:if="${#fields.hasErrors('coverImg')}" th:errors="*{coverImg}"></i>
 						</div>	
 						<div class="form-group clearfix" style="height: 400px;">
 							<label class="fl">产品介绍</label>							
