add subject feature

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@
                         <a ui-sref="brand">商品分类管理</a>
                     </li>
                     <li>
-                        <a href="goods.html">商品管理</a>
+                        <a ui-sref="product">商品管理</a>
                     </li>
                     <li>
                         <a ui-sref="advertise">广告发布</a>
