--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -1,7 +1,7 @@
 <div class="modal-content">
     <div class="modal-body">
         <div class="contentpanel">
-            <form class="form-horizontal w300" ng-submit="submit()">
+            <form class="form-horizontal w300">
                 <div class="row">
                     <div class="form-group">
                         <label class="control-label col-sm-2">标题</label>
@@ -15,9 +15,19 @@
                             <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label>solutios</label>
+                        <ul>
+                            <li ng-repeat="s in item.solutions track by $index">
+                                {{s.name}}
+                                <a ng-click="deleteSolution($index)">delete</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <input type="submit" class="btn btn-primary" value="提交" />
+                    <input type="submit" class="btn btn-primary" value="提交" ng-click="submit()" />
+                    <button ng-click="addSolution()">add</button>
                 </div>
             </form>
         </div>
