--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -1,32 +1,50 @@
 <div class="modal-content">
     <div class="modal-body">
         <div class="contentpanel">
-            <form class="form-horizontal w300" ng-submit="submit()">
+            <form class="form-horizontal w300" ng-submit="submit()" th:object="${subject}">
                 <div class="row">
                     <div class="form-group">
                         <label class="control-label col-sm-2">标题</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="item.title" />
+                            <input type="text" class="form-control" th:field="*{name}" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2">图片</label>
                         <div class="col-sm-6">
-                            <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
+                            <textarea th:field="*{content.content}"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
-                        <ul ng-repeat="s in item.solutions">
-                            <li ng-repeat="p in s.products">
-                                <li>{{p.name}}</li>
-                            </li>
-                        </ul>
+                        <table th:each="sl:*{solutions}">
+                            <tr th:text="${sl.name}">
+                            </tr>
+                            <tr th:each="p:${sl.products}">
+                                <td th:text="${p.name}"></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div ng-repeat="s in item.solutions">
+                        <input type="text" />
                     </div>
                 </div>
                 <div class="modal-footer">
                     <input type="submit" class="btn btn-primary" value="提交" />
+                    <button ng-click="addSolution()">add</button>
                 </div>
+                <a th:attr="href=@{#/subject/__${id}__/solutions}">link</a>
             </form>
         </div>
     </div>
 </div>
+<script>
+$(function() {
+    $('textarea').ckeditor({
+        uiColor: '#000000',
+        filebrowserBrowseUrl: '/upload',
+        filebrowserUploadUrl: '/admin/editor/img/upload',
+        width: 895,
+        height: 300
+    });
+});
+</script>
