--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -86,11 +86,9 @@
 							<div class="tab-panel products-detail">
 								<div class="fl list-mode">
 									<ul>
-										<li th:each="productCategory:${yqs}"><label
-											th:text="${productCategory.name}"></label>
+										<li th:each="productCategory:${yqs}"><a th:text="${productCategory.name}" th:href="@{'/productCategory/仪器/'+${productCategory.name}}"></a>
 											<div>
-												<i th:each="child:${productCategory.categories}"><a
-													th:text="${child.name}"></a><i>|</i></i>
+												<i th:each="child:${productCategory.categories}"><a th:text="${child.name}" th:href="@{'/productCategory/仪器/'+${productCategory.name}+'/'+${child.name}}"></a><i>|</i></i>
 											</div></li>
 									</ul>
 								</div>
