--- a/web/src/main/resources/templates/user/common/buys.html
+++ b/web/src/main/resources/templates/user/common/buys.html
@@ -18,24 +18,6 @@
 		$(document).ajaxSend(function(e, xhr, options) {
 			xhr.setRequestHeader(header, token);
 		});
-		$('.show-wrap').click(function(){
-			var pdf = $(this);
-			var productId = pdf.attr("product-id");
-			$.ajax({
-				type : 'get',
-				url : '/user/buyRecords/'+productId,
-				success : function(data){
-					var wrap = $('.hide-wrap');
-					wrap.empty();
-					wrap.append(data);
-					wrap.fadeIn();
-					$('.fixed').fadeIn();
-				},
-				error : function(data){
-					
-				}
-			});
-		});
 		$('.delete').click(function(){
 			var obj = $(this);
 			var id = obj.attr('data-id');
@@ -83,8 +65,7 @@
 								<td th:text="${buyStat.index+1}"></td>
 								<td th:text="${#dates.format(buy.createTime, 'yyyy-MM-dd')}"></td>
 								<td class="show-wrap" th:attr="product-id=${buy.id}">
-									<a th:text="${buy.name}" th:attr="product-id=${buy.id}">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									<a th:text="${buy.name}" th:href="'/user/buyRecords/'+${buy.id}">
 									</a>
 								</td>
 								<td th:text="${buy.price}">1111.00</td>
@@ -104,9 +85,6 @@
 		© 1998 - 2015 SJ Inc. All Rights Reserved
 	</div>
 	<div class="fixed"></div>
-	<div class="hide-wrap orders bodr" id="pdf">
-		<!-- pdf.html -->
-	</div>
 	<div class="hide-wrap-small bodr">
 		<span class="cancel ft14">关闭</span>
 		<div>
