--- a/web/src/main/resources/templates/user/common/createBuy.html
+++ b/web/src/main/resources/templates/user/common/createBuy.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
-<title>采购申请</title>
+<title>填写采购信息</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datetimepicker.min.css}" />
 <script th:src="@{/js/jquery-min.js}"></script>
@@ -37,25 +37,22 @@
 					<a href="/user/detail">个人资料</a> <a href="/user/collection">收藏夹</a>
 					<a href="/user/cart">购物车</a> <a class="active">采购申请</a>
 				</div>
-				<div class="mainpanel pdf fr">
-					<div class="hide-con" th:object="${buy}">
+					<div class="mainpanel pdf fr">
+					<div class="hide-con" >
 						<h2>
-							<i th:text="${buy.user.company}"></i>采购方单位-物资(外包服务)申购单
+							<i th:text="${user.company}"></i>采购方单位-物资(外包服务)申购单
 						</h2>
 						<div>
-							编号 : <i th:text="${buy.noId}"></i>
 						</div>
 						<div class="orders-form">
-							<form th:object="${buy}" th:method="put">
+							<form th:object="${buy}" method="post">
 								<div class="form-group">
-									<label>申请单位</label> 
-									<input type="text" th:field="*{user.company}" disabled="disabled" /> <label>行业</label>
-									<input type="text" th:field="*{user.industryInfo.name}" disabled="disabled" /> 
-									
+									<label>申请单位</label> <input type="text" th:value="${user.company}" readonly="readonly" /> 
+									<label>行业</label><input type="text" th:value="${user.industryInfo.name}" readonly="readonly" /> 
 								</div>
 								<div class="form-group">
-								<label>申请部门</label> <input type="text" th:field="*{user.department}" disabled="disabled" />
-									<label>申请人</label> <input type="text" th:field="*{user.realName}" disabled="disabled" />
+									<label>申请部门</label> <input type="text" th:value="${user.department}" readonly="readonly" />
+									<label>申请人</label> <input type="text" th:value="${user.realName}" readonly="readonly" />
 								</div>
 								<div class="form-group">
 									<label>经费类别</label><input type="text" class="w635" th:field="*{fundCategory}"/>
@@ -76,20 +73,19 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr th:each="product,productStat:${buy.getProducts()}">
-											<td th:text="${productStat.index+1}">1</td>
-											<td th:text="${product.product.name}">Lorem ipsum dolor
-												sit amet</td>
-											<td th:text="${product.product.model}">LoremLorem</td>
-											<td th:text="${product.product.specifications}">Lorem</td>
-											<td th:text="${product.number}">1</td>
-											<td th:text="${product.number * product.product.price}">1222.00</td>
-											<td th:switch="${product.product.placeOfProduction.toString()}">
+										 <tr th:each="cart,cartStat:${lines}">
+											<td th:text="${cartStat.index+1}">1</td>
+											<td th:text="${cart.name}"></td>
+											<td th:text="${cart.model}"></td>
+											<td th:text="1111"></td>
+											<td th:text="${cart.number}"></td>
+											<td th:text="${cart.count}"></td>
+											<td th:switch="${cart.place.toString()}">
 												<i th:case="'DOMESTIC'" th:text="国内"></i> <i
 												th:case="'EUROPEANDUS'" th:text="欧美"></i> <i
 												th:case="'OTHER'" th:text="其他"></i>
 											</td>
-										</tr>
+										</tr> 
 									</tbody>
 								</table>
 								<div class="gray-hd winh clearfix">
@@ -106,10 +102,8 @@
 									<input class="form-control datepicker" id="arrivalTime" name="arrivalTime" type="text" readonly="readonly"/>
 								</div>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-								<button class="btn green mauto">保存</button>
-								<a href="/user/buyRecords">
-									<button class="btn default" type="button">返回</button>
-								</a>
+								<button class="btn green mauto">生成完毕</button>
+								<a href="/user/cart"><button class="btn green mauto" type="button">取消</button></a>
 							</form>
 						</div>
 					</div>
@@ -118,7 +112,7 @@
 		</div>
 	</div>
 	<div class="footer">© 1998 - 2015 SJ Inc. All Rights Reserved</div>
-	<script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
+		<script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
 	<script type="text/javascript">
 		(function($){
 		$.fn.datetimepicker.dates['zh-CN'] = {
