product list search feature

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -26,6 +26,8 @@
     <script src="/js/module/advertisement.js"></script>
     <script src="/js/module/info.js"></script>
     <script src="/js/module/subject.js"></script>
+    <script src="/js/module/product.js"></script>
+    <script src="/js/module/productCategory.js"></script>
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
@@ -62,7 +64,16 @@
                         <a ui-sref="brand">商品分类管理</a>
                     </li>
                     <li>
-                        <a ui-sref="product">商品管理</a>
+                        <a ui-sref="consumable">consumable</a>
+                    </li>
+                    <li>
+                        <a ui-sref="instrument">instrument</a>
+                    </li>
+                    <li>
+                        <a ui-sref="reagents">reagents</a>
+                    </li>
+                    <li>
+                        <a ui-sref="servcie">servcie</a>
                     </li>
                     <li>
                         <a ui-sref="advertise">广告发布</a>
